--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "3.3.2",
+    "@pinia/nuxt": "^0.11.2",
+    "@prisma/client": "6.15.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@vueuse/nuxt": "^13.8.0",
     "better-sqlite3": "^12.2.0",
     "eslint": "^9.34.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "prisma": "6.15.0"
   }
 }
