--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "db:seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
     "@kinde-oss/kinde-auth-pkce-js": "^4.3.0",
     "@nuxt/content": "3.6.3",
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
-    "@nuxt/ui": "3.3.2",
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "6.15.0",
     "@types/jsonwebtoken": "^9.0.10",
@@ -32,6 +33,9 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "prisma": "6.15.0"
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tailwindcss/postcss": "^4.1.12",
+    "prisma": "6.15.0",
+    "tailwindcss": "^3.4.17"
   }
 }
