refactor: remove Kinde authentication callback page and related logic
feat: integrate nuxt-auth-utils for improved authentication handling

chore: update dependencies and configuration for color mode support

style: configure Tailwind CSS for dark mode

feat: implement demo login API for user session management

feat: add GitHub OAuth authentication handler

feat: create logout API endpoint to clear user session

chore: add composables for authentication management

chore: initialize empty components and pages for future development

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
-    "@kinde-oss/kinde-auth-pkce-js": "^4.3.0",
     "@nuxt/content": "3.6.3",
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "6.15.0",
     "@types/jsonwebtoken": "^9.0.10",
@@ -25,6 +25,7 @@
     "eslint": "^9.34.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^4.0.3",
+    "nuxt-auth-utils": "^0.5.23",
     "pinia": "^3.0.3",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
