Refactor authentication and portfolio management APIs
- Removed demo login and GitHub OAuth login handlers.
- Eliminated logout functionality.
- Reimplemented portfolio-related API endpoints for fetching, creating, and managing portfolios, holdings, and transactions.
- Introduced middleware for authentication checks.
- Added a new plugin for API client to handle authentication tokens.
- Created a new store for managing portfolio state in the application.
- Updated authentication logic to use JWT and handle user sessions.
- Cleaned up unused code and files related to previous implementations.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -41,7 +41,8 @@
 				"Gruntfuggly.todo-tree",
 				"esbenp.prettier-vscode",
 				"rvest.vs-code-prettier-eslint",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"qwtel.sqlite-viewer"
 			]
 		}
 	}
