--- a/package.json
+++ b/package.json
@@ -10,33 +10,31 @@
     "postinstall": "nuxt prepare",
     "db:seed": "node scripts/seed.js"
   },
-  "dependencies": {
+  "devDependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/content": "3.6.3",
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/kinde": "0.3.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "6.15.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/jsonwebtoken": "^9.0.10",
     "@vueuse/nuxt": "^13.8.0",
     "better-sqlite3": "^12.2.0",
     "eslint": "^9.34.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^4.0.3",
-    "nuxt-auth-utils": "^0.5.23",
     "pinia": "^3.0.3",
+    "prisma": "6.15.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1",
     "zod": "^4.1.5"
-  },
-  "devDependencies": {
-    "@iconify-json/heroicons": "^1.2.2",
-    "@nuxtjs/tailwindcss": "^6.14.0",
-    "@tailwindcss/postcss": "^4.1.12",
-    "prisma": "6.15.0",
-    "tailwindcss": "^3.4.17"
   }
 }
