feat: refactor environment variables and update database configurations
- Updated .env.example to include new Kinde authentication variables and various database options for different deployment scenarios.
- Removed the portfolio.vue page and related components, streamlining the application structure.
- Deleted unused CSS file and several Vue components related to portfolio management.
- Removed authentication middleware and related API endpoints.
- Added Dockerfile and docker-compose configuration for deployment with SQLite persistence.
- Introduced backup and initialization scripts for database management.
- Implemented health check endpoint for monitoring application status.
- Updated Vercel and Wrangler configurations for deployment.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,30 @@
 # Kinde Authentication
-KINDE_DOMAIN=your-kinde-domain.kinde.com
-KINDE_CLIENT_ID=your-client-id
-KINDE_CLIENT_SECRET=your-client-secret
-KINDE_REDIRECT_URL=http://localhost:3000/api/auth/kinde_callback
-KINDE_LOGOUT_REDIRECT_URL=http://localhost:3000
+NUXT_KINDE_AUTH_DOMAIN=https://your-kinde-domain.kinde.com
+NUXT_KINDE_CLIENT_ID=your-client-id
+NUXT_KINDE_CLIENT_SECRET=your-client-secret
+NUXT_KINDE_REDIRECT_URL=http://localhost:3000/api/callback
+NUXT_KINDE_LOGOUT_REDIRECT_URL=http://localhost:3000
+NUXT_KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/portfolio
+NUXT_KINDE_PASSWORD=your-random-password
 
-# Database
-DATABASE_URL=postgresql://username:password@localhost:5432/allegutta_web
+# Database Options (choose one based on deployment)
+# Local Development
+DATABASE_URL="file:./dev.db"
+
+# Docker/Production with persistent volume
+# DATABASE_URL="file:/app/data/production.db"
+
+# Cloudflare D1 (SQLite-compatible)
+# DATABASE_URL="d1://allegutta-production"
+
+# Vercel with Turso (SQLite-compatible cloud)
+# DATABASE_URL="libsql://your-database-url.turso.io?authToken=your-auth-token"
+
+# Vercel with PlanetScale (MySQL-compatible)
+# DATABASE_URL="mysql://username:password@host:port/database?sslaccept=strict"
+
+# Vercel with Neon (PostgreSQL-compatible)
+# DATABASE_URL="postgresql://username:password@host:port/database?sslmode=require"
 
 # JWT Secret (generate a random string)
 JWT_SECRET=your-super-secret-jwt-key
