--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "vue": "^3.5.20",
     "vue-router": "^4.5.1",
     "zod": "^4.1.5"
+  },
+  "dependencies": {
+    "@kinde-oss/kinde-typescript-sdk": "^2.13.0"
   }
 }
