feat: Enhance authentication middleware and role management, add client-side admin checks

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,7 +42,8 @@
 				"esbenp.prettier-vscode",
 				"rvest.vs-code-prettier-eslint",
 				"eamodio.gitlens",
-				"qwtel.sqlite-viewer"
+				"qwtel.sqlite-viewer",
+				"cweijan.vscode-database-client2"
 			]
 		}
 	}
