--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "zod": "^4.1.5"
   },
   "dependencies": {
-    "@kinde-oss/kinde-typescript-sdk": "^2.13.0"
+    "@kinde-oss/kinde-typescript-sdk": "^2.13.0",
+    "@nuxtjs/i18n": "^10.0.6"
   }
 }
