feat: Add market data worker configuration and update handling for portfolio data

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,9 @@ JWT_SECRET=your-super-secret-jwt-key
 
 # Base URL
 BASE_URL=http://localhost:3000
+
+# Market Data Worker Configuration
+# Enable/disable the market data worker (default: false, enabled in production)
+ENABLE_MARKET_DATA_WORKER=true
+# Update interval in minutes (default: 1 minute, minimum: 0.25 minutes / 15 seconds)
+MARKET_DATA_UPDATE_INTERVAL_MINUTES=1
