--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,7 +43,7 @@
 				"rvest.vs-code-prettier-eslint",
 				"eamodio.gitlens",
 				"qwtel.sqlite-viewer",
-				"cweijan.vscode-database-client2"
+				"Lokalise.i18n-ally"
 			]
 		}
 	}
