--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@iconify-json/heroicons": "^1.2.2",
+    "@kinde-oss/kinde-typescript-sdk": "^2.13.0",
     "@nuxt/content": "3.6.3",
     "@nuxt/eslint": "1.9.0",
+    "@nuxtjs/i18n": "^10.0.6",
     "@nuxt/image": "1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/kinde": "0.3.0",
@@ -46,9 +48,5 @@
     "vue": "^3.5.20",
     "vue-router": "^4.5.1",
     "zod": "^4.1.5"
-  },
-  "dependencies": {
-    "@kinde-oss/kinde-typescript-sdk": "^2.13.0",
-    "@nuxtjs/i18n": "^10.0.6"
   }
 }
