feat(portfolio): add loading indicators for enhanced data fetching and holdings refresh fix(docker): update host path for persistence in docker-compose configuration

--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -43,7 +43,7 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /opt/allegutta/data  # Host path for persistence
+      device: /mnt/docker/allegutta-web/data  # Host path for persistence
 
 networks:
   default:
