--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,7 +43,8 @@
 				"rvest.vs-code-prettier-eslint",
 				"eamodio.gitlens",
 				"qwtel.sqlite-viewer",
-				"Lokalise.i18n-ally"
+				"Lokalise.i18n-ally",
+				"foxundermoon.shell-format"
 			]
 		}
 	}
