feat: Update environment variable names to NUXT_DATABASE_URL and adjust related configurations

--- a/.env.example
+++ b/.env.example
@@ -9,22 +9,22 @@ NUXT_KINDE_PASSWORD=your-random-password
 
 # Database Options (choose one based on deployment)
 # Local Development
-DATABASE_URL="file:./dev.db"
+NUXT_DATABASE_URL="file:./dev.db"
 
 # Docker/Production with persistent volume
-# DATABASE_URL="file:/app/data/production.db"
+# NUXT_DATABASE_URL="file:/app/data/production.db"
 
 # Cloudflare D1 (SQLite-compatible)
-# DATABASE_URL="d1://allegutta-production"
+# NUXT_DATABASE_URL="d1://allegutta-production"
 
 # Vercel with Turso (SQLite-compatible cloud)
-# DATABASE_URL="libsql://your-database-url.turso.io?authToken=your-auth-token"
+# NUXT_DATABASE_URL="libsql://your-database-url.turso.io?authToken=your-auth-token"
 
 # Vercel with PlanetScale (MySQL-compatible)
-# DATABASE_URL="mysql://username:password@host:port/database?sslaccept=strict"
+# NUXT_DATABASE_URL="mysql://username:password@host:port/database?sslaccept=strict"
 
 # Vercel with Neon (PostgreSQL-compatible)
-# DATABASE_URL="postgresql://username:password@host:port/database?sslmode=require"
+# NUXT_DATABASE_URL="postgresql://username:password@host:port/database?sslmode=require"
 
 # JWT Secret (generate a random string)
 JWT_SECRET=your-super-secret-jwt-key
