--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -7,7 +7,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=file:/app/data/production.db
+      - NUXT_DATABASE_URL=file:/app/data/production.db
       - NUXT_SECRET_KEY=${NUXT_SECRET_KEY}
       - NUXT_KINDE_ISSUER_BASE_URL=${NUXT_KINDE_ISSUER_BASE_URL}
       - NUXT_KINDE_CLIENT_ID=${NUXT_KINDE_CLIENT_ID}
