feat(database): Implement simple database schema verifier and initializer
- Added `initializeDatabase` function to verify and update the database schema on application startup.
- Introduced error handling for missing tables and provided instructions for schema updates in production and development environments.
- Created `closeDatabaseConnection` and `getPrismaClient` functions for managing database connections.

feat(instrumentRelationships): Enhance instrument relationship detection

- Developed a dynamic instrument relationship mapping system using advanced algorithms.
- Implemented smart detection of related instruments based on transaction patterns.
- Added functionality to prevent T-RETT cross-linking issues and improved relationship scoring.

feat(portfolioCalculations): Integrate broker-specific logic into portfolio calculations

- Enhanced `updateSecurityHoldingsWithBroker` to include broker-specific calculations for GAV.
- Implemented analysis of portfolio broker configurations and suggested optimal settings.
- Added API endpoint to test different broker configurations and calculate discrepancies.

feat(database-init): Automate database initialization on server startup

- Created a Nitro plugin to initialize the database schema automatically.
- Implemented production-safe schema updates with backup and error handling.

test: Add ACR calculation test script

- Created a test script for validating ACR calculation functionality.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "start": "node .output/server/index.mjs",
-    "db:seed": "node scripts/seed.js",
     "db:init": "./scripts/init-db.sh",
     "db:init:docker": "./scripts/init-db.sh docker",
     "db:init:production": "./scripts/init-db.sh production",
+    "db:deploy:production": "./scripts/deploy-production.sh",
+    "db:push": "npx prisma db push",
+    "db:reset": "rm -f ./dev.db && ./scripts/init-db.sh",
+    "db:studio": "npx prisma studio",
+    "db:backup": "./scripts/backup.sh",
+    "db:backup:production": "./scripts/backup.sh production",
+    "db:seed": "node scripts/seed.js",
     "backup": "./scripts/backup.sh local",
     "backup:s3": "./scripts/backup.sh s3",
     "backup:docker": "./scripts/backup.sh docker",
