--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,12 @@ NUXT_KINDE_PASSWORD=your-random-password
 
 # Database Options (choose one based on deployment)
 # Local Development
+# Database configuration
 NUXT_DATABASE_URL="file:./dev.db"
+
+# Production database auto-update (default: true)
+# Set to false to disable automatic schema updates in production
+NUXT_AUTO_DB_UPDATE="true"
 
 # Docker/Production with persistent volume
 # NUXT_DATABASE_URL="file:/app/data/production.db"
