--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "6.15.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@vite-pwa/nuxt": "^1.0.4",
     "@vueuse/nuxt": "^13.9.0",
     "eslint": "^9.35.0",
     "nuxt": "^4.1.1",
@@ -48,6 +49,7 @@
     "typescript": "^5.9.2",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
+    "workbox-window": "^7.3.0",
     "zod": "^4.1.5"
   }
 }
