--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
     "@pinia/nuxt": "^0.11.2",
     "@prisma/client": "6.15.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/luxon": "^3.7.1",
     "@vite-pwa/nuxt": "^1.0.4",
     "@vueuse/nuxt": "^13.9.0",
     "eslint": "^9.35.0",
+    "holidays-norway-ts": "^1.1.22",
+    "luxon": "^3.7.2",
     "nuxt": "^4.1.1",
     "pinia": "^3.0.3",
     "prisma": "6.15.0",
